2008-03-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/forceengine.*: Render forces on atoms. Uses
	OBConformerData, needs latest OB SVN to work.

2008-03-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Stop invalidating the cache on mouse
	release - I think we have all the events covered that should
	invalidate the cache now without this catch all.

	* libavogadro/src/engines/orbitalengine.cpp: Just draw GL_LINES.

	* libavogadro/src/tools/selectrotatetool.cpp: Change cursor types
	depending upon the action being performed - better visual cues.

2008-03-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Added a second light source to our
	scene - position and brightness may need tweaking. Surface rendering
	was improved by this.

	* libavogadro/src/engines/bsdyengine.cpp: Draw multiple bonds in quick
	draw. Switching between multiple and single bonds can be distracting.
	Should possibly switch to single bonds only with large molecules.

	* libavogadro/src/glwidget.cpp: Add back in some makeCurrent calls
	that really were necessary outside of the threaded GL #ifdefs. This
	fixes PR#1906403.

2008-03-01  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/bsdyengine.*: Add a renderQuick function to
	this engine. Selected atoms/bonds rendered as opaque objects using the
	selection colour. Multiple bonds are not displayed. No transparency.

2008-02-29  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engine.h: API cleanup - remove the second unused
	argument from the quickRender function.

	* libavogadro/src/glwidget.cpp,
	libavogadro/src/engines/labelengine.*,
	libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/ribbonengine.*: Ported to use the new
	quickRender function.

	* libavogadro/src/glwidget.cpp: Correct a bug in the setSelected
	function which was causing it to toggle the selection rather than set